# PCS-2026

./: esercizio_prova.txt  main.cpp  passo1.cpp  prog
esercitazione1/: CMakeLists.txt  media.cpp
esercitazione1/build_es1/: Makefile  es1  (+1 more)
esercitazione10/: CMakeLists.txt  gradiente_coniugato.hpp  main.cpp
esercitazione2/: CMakeLists.txt  algo_vari.cpp  esercizio2_commento.txt.txt  passo1.cpp  prog  rational.hpp
esercitazione3/: CMakeLists.txt  es3  esercizio3.cpp  prog  rational.hpp
esercitazione4/: algorithms.hpp
esercitazione5/: CMakeLists.txt  algorithms.hpp  confronto.cpp  misure_sorts.cpp  quick_sort_aggiornato.cpp  tempi.csv  tempi_soglia.csv  test_mergesort.cpp  test_quicksort.cpp  trova_soglia.txt.txt
esercitazione8/: CMakeLists.txt  main.cpp  unidirected_edge.hpp  unidirected_graph.hpp
esercitazione8/build_es8/: CMakeCache.txt  Makefile  cmake_install.cmake  test_grafi
esercitazione9/: CMakeLists.txt  algorithms.hpp  containers.hpp  dijkstra.hpp  main.cpp  unidirected_edge1.hpp  unidirected_graph1.hpp
esercitazione9/build_es9/: CMakeCache.txt  G_tree.dot  Makefile  algoritmi_grafi  bfs.dot  cmake_install.cmake  dfs.dot  dijkstra.dot  recursive_dfs.dot
progetto/: CMakeLists.txt  DePina.hpp  Sistema_lineare.hpp  ciclifondamentali.hpp  dijkstra.hpp  gradiente_coniugato.hpp  input.txt  main.cpp  netlist.hpp
progetto/build_progetto/: CMakeCache.txt  Makefile  cmake_install.cmake  progetto_finale
progetto_smart/: DePina_Dijkstra.hpp  Sistema_lineare.hpp  ciclifondamentali.hpp  dfs.hpp  dijkstra.hpp  main.cpp  netlist.hpp  unidirected_graph2.hpp
(+37 files in other folders)
